<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layoutDirection="rtl"
    tools:context=".MainActivity">


<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintGuide_percent="0.42" />-->


    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/color_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/mstart50"
            android:paddingEnd="@dimen/m_end50">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_addPng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/a_jannat_it_bold"
                    android:text="@string/add_png"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorYellow" />

                <ImageView
                    android:id="@+id/btn_addImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_mob_add"
                    android:src="@drawable/ic_add" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_company"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mob_height_relative"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_spinner"
                android:padding="@dimen/padding10"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:id="@+id/you_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/a_jannat_it_bold"
                    android:text="@string/your_car"
                    android:textSize="@dimen/mob_size_text" />

                <!--        <Spinner-->
                <!--            android:id="@+id/spinner_company"-->
                <!--            android:layout_width="wrap_content"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:layout_alignParentStart="true"-->
                <!--            android:background="@null"-->
                <!--            android:minHeight="0dp" />-->

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/me_arrow"
                    android:src="@drawable/ic_mob_polygon_3" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_model"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mob_height_relative"
                android:layout_marginTop="@dimen/mt_model"
                android:background="@drawable/bg_spinner"
                android:padding="@dimen/padding10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_company">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/me_arrow"
                    android:src="@drawable/ic_mob_polygon_3" />

                <TextView
                    android:id="@+id/tv_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/a_jannat_it_bold"
                    android:text="@string/model"
                    android:textSize="@dimen/mob_size_text" />

                <!--                <Spinner-->
                <!--                    android:id="@+id/spinner_type"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:background="@null"-->
                <!--                    android:textAlignment="center" />-->
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_model"
                android:layout_width="260dp"
                android:layout_height="520dp"
                android:elevation="2dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_model" />

            <EditText
                android:id="@+id/ed_mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mob_height_relative"
                android:layout_marginTop="@dimen/mt_model"
                android:background="@drawable/bg_edit"
                android:ems="10"
                android:hint="@string/mobile_number"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:padding="@dimen/padding10"
                android:textAlignment="center"
                android:textSize="@dimen/mob_size_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_model" />

            <Button
                android:id="@+id/btn_sendOffer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mob_height_relative"
                android:layout_marginTop="@dimen/mt_model"
                android:background="@drawable/trans_drawable"
                android:padding="@dimen/padding10"
                android:text="@string/send_me_offer"
                android:textColor="@color/colorYellow"
                android:textSize="@dimen/mob_size_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_mobile" />

            <Button
                android:id="@+id/btn_add_success"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mt_model"
                android:background="@drawable/bg_btn_success"
                android:text="@string/add_success"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_mobile" />


            <GridView
                android:id="@+id/gv_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:numColumns="2"
                android:stretchMode="columnWidth"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_company" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/img_car"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:indicatorColor="@color/colorYellow"
        app:indicatorName="LineSpinFadeLoaderIndicator"
        app:layout_constraintBottom_toBottomOf="@+id/img_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi2"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:indicatorColor="@color/colorYellow"
        app:indicatorName="LineSpinFadeLoaderIndicator"
        app:layout_constraintBottom_toBottomOf="@+id/img_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>